fix spacing :lipstick:
Fixed link spacing

--- a/idm241/beta/beta.css
+++ b/idm241/beta/beta.css
@@ -74,7 +74,7 @@ h3 {
     font-family: 'merriweather';
     font-size: 24px;
     color: var(--brown);
-    margin-top: 50px;
+    margin: 50px 0;
 }
 
 .title a {
